kubernetes-networks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo3
  namespace: homework
  labels:
    app: demo3
spec:
  selector:
    matchLabels:
      app: demo3
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 33%
      maxUnavailable: 33%
  template:
    metadata:
      labels:
        app: demo3
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: homework
                    operator: In
                    values:
                      - "true"
      containers:
        - name: nginx
          image: nginx
          imagePullPolicy: IfNotPresent
          command: ["/bin/sh", "-c"]
          args: [
            "echo 'server { listen $(CUSTOM_PORT); location / { root $(CUSTOM_ROOT); index index.html; } }' \
            >> /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
          ]
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", 'rm /homework/index.html']
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet:
              scheme: HTTP
              path: /index.html
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
          volumeMounts:
            - name: workdir
              mountPath: /homework
      # These containers are run during pod initialization
      dnsPolicy: Default
      volumes:
        - name: workdir
          emptyDir: {}
